[tool.poetry]
name = "kr_invest_api"
version = "0.1.0"
description = "Direct Indexing Using kr_invest_api"
authors = ["GUNYOUNG LEE <2ky1234@khu.ac.kr>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pandas = "^1.4.3"
yfinance = "^0.1.74"
pandas-datareader = "^0.10.0"
PyQt5 = "^5.15.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
